--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "node index.js",
     "test": "node ./node_modules/jest/bin/jest"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Alemango/my_launchx_app"
+  },
   "author": "alemango",
   "license": "ISC",
   "devDependencies": {
